clusters/homelab/infrastructure/authelia/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authelia
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
